add ip release for ip conflict situation
